--- a/src/app/contactus/contactus.component.css
+++ b/src/app/contactus/contactus.component.css
@@ -52,7 +52,7 @@ button {
 }
 
 .success {
-  color: green;
+  color: maroon;
   font-size: 0.95rem;
   margin-top: 15px;
 }
